--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <header class="header">
+        <h2>Hello World</h2>
         <h1>Lorem ipsum dolor sit amet.</h1>
         <div class="logo"></div>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, maiores?</p>
